spacing fixed in index search

--- a/app/assets/stylesheets/profilesPage.scss
+++ b/app/assets/stylesheets/profilesPage.scss
@@ -12,6 +12,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
+    align-content: baseline;
 }
 
 
@@ -21,6 +22,7 @@
     height: 270px;
     // background-color: white;
     padding: 5px;
+    margin-bottom: 10px;
 }
 
 .profile-index-item-content {
@@ -51,4 +53,5 @@
     margin-top: 20px;
     padding-left: 20px;
     line-height: normal;
+    padding-right: 20px;
 }
